# ChangeLog for dev-java/java-config
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/java-config/ChangeLog,v 1.132 2006/12/08 01:33:38 caster Exp $

  08 Dec 2006; Vlastimil Babka <caster@gentoo.org>
  +files/jdk-defaults-x86-fbsd.conf, java-config-2.0.30.ebuild:
  Add jdk-defaults.conf for x86-fbsd, bug #157380 was partially caused by this
  file missing.

  15 Oct 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  java-config-1.3.7.ebuild, java-config-2.0.30.ebuild:
  ppc stable. bug #147254

  15 Oct 2006; Joshua Nichols <nichoj@gentoo.org> java-config-1.3.7.ebuild,
  java-config-2.0.30.ebuild:
  Stabilizing on ia64 as part of new Java system, bug #147254.

  15 Oct 2006; Joshua Nichols <nichoj@gentoo.org> java-config-1.3.7.ebuild,
  java-config-2.0.30.ebuild:
  Fixed wording in postinstall message.

  14 Oct 2006; Joshua Nichols <nichoj@gentoo.org> java-config-1.3.7.ebuild,
  java-config-2.0.30.ebuild:
  Stabilizing on amd64 as part of new Java system, bug #147254.

  14 Oct 2006; Joshua Nichols <nichoj@gentoo.org> java-config-1.3.7.ebuild,
  java-config-2.0.30.ebuild:
  Stabilizing on ppc64 as part of new Java system, bug #147254.

  14 Oct 2006; Joshua Jackson <tsunam@gentoo.org> java-config-1.3.7.ebuild,
  java-config-2.0.30.ebuild:
  New java stable on x86; bug #147254

  05 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  java-config-1.2.11-r1.ebuild, java-config-1.3.7.ebuild,
  java-config-2.0.30.ebuild:
  Dropping sparc keywords, see #96229

*java-config-2.0.30 (23 Sep 2006)

  23 Sep 2006; Joshua Nichols <nichoj@gentoo.org>
  -files/java-config-2.0.28-classpath.patch, -java-config-2.0.29.ebuild,
  +java-config-2.0.30.ebuild:
  Tweaked output to be similar to java-config-1. A notice is displayed when a
  user or system VM is set.

  22 Sep 2006; Vlastimil Babka <caster@gentoo.org>
  java-config-2.0.29.ebuild:
  Sync java-config-2's postinst messages with java-config-1: use elog() and