@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX java-config-1.2.11-shebang.patch 229 RMD160 e201dafad76307123139861371ade56f03887342 SHA1 e91f77077bb0b5793bda7ffc58442019dc66db09 SHA256 4068a51515b7510260de57a5872d6e04b1a33d2f9728d77ed00fe7f41cced83a
 MD5 882665d94cc943f315ec729d990afadf files/java-config-1.2.11-shebang.patch 229
 RMD160 e201dafad76307123139861371ade56f03887342 files/java-config-1.2.11-shebang.patch 229
@@ -25,6 +28,7 @@ SHA256 e92e1111a26364f915a6588701f94527f7b3f25bb381edcd490a495393a9b598 files/jd
 DIST java-config-1.2.11.tar.bz2 15743 RMD160 e1175474e87f234f9428d7db6827a3a4435e6aba SHA1 fd2ffdda515005ef7a9358b650f59674c13bc0b7 SHA256 f17bdce2b97dca14daf77dbefb6d6c0935fbc444b67e9a0d7cc68538575a6b83
 DIST java-config-1.3.7.tar.bz2 14362 RMD160 243739cdef9ea5b2baa708eabd5358d1804631de SHA1 48a46198ceace1a27d49c5176b2b6d720aaa9eff SHA256 bed302b9643d19caa3f1bbb75ebb8d9373a4ccf68a0b437a158f7265171f56d1
 DIST java-config-2.0.30.tar.bz2 16515 RMD160 8eefa3a8bca334c61c3cca1429fcdd0339167b6a SHA1 b6ed21c95f674e8c9fd277b04b6282edd56f26f2 SHA256 934fd8fe9498e5158f91e6f48d604ee15750737918cddcd92c187ed3dfac36d4
+DIST java-config-2.0.31.tar.bz2 17001 RMD160 4b3d8362538b435a642312ee7289824d6662e309 SHA1 dd02ab97846e9b9ad3f7056dfa47997e7dee5cb4 SHA256 314ec1783da8190d60e757aaef2af8eae7281c3c9754024e3e59643ce7a30752
 EBUILD java-config-1.2.11-r1.ebuild 870 RMD160 6d38dc5dccb0824d2d1a480aa9c3c14b672467cd SHA1 d44a7bc7a71a83319c2d2caa25749619fa9facf4 SHA256 0f38b63b4ed9c6a01e21a213bd5aedfd29fe5148a21c65e4417c7a561055d171
 MD5 f46322febcd8f897ad22d6c6adf7c9f6 java-config-1.2.11-r1.ebuild 870
 RMD160 6d38dc5dccb0824d2d1a480aa9c3c14b672467cd java-config-1.2.11-r1.ebuild 870
@@ -37,10 +41,14 @@ EBUILD java-config-2.0.30.ebuild 1913 RMD160 1ea749951943b870b544e000b5fb60d70b4
 MD5 cb1818d428e3e71be1f8a02c486dd222 java-config-2.0.30.ebuild 1913
 RMD160 1ea749951943b870b544e000b5fb60d70b4ec8dc java-config-2.0.30.ebuild 1913
 SHA256 66fe9c5427382f6bd0edd563cc11c47eb55cd17ce08bdbd3958808e2471cb4c2 java-config-2.0.30.ebuild 1913
-MISC ChangeLog 25093 RMD160 2b02603b3d26d439635935cd8eceadda6af8fac0 SHA1 5147103545571f3af85aa8a59a780a23162527f1 SHA256 d8f558e41e0355721b759a3229c34523a998b5d11941f6189a8f55aba8cbdbda
-MD5 da43e5575f7440329041e8bd97df9389 ChangeLog 25093
-RMD160 2b02603b3d26d439635935cd8eceadda6af8fac0 ChangeLog 25093
-SHA256 d8f558e41e0355721b759a3229c34523a998b5d11941f6189a8f55aba8cbdbda ChangeLog 25093
+EBUILD java-config-2.0.31.ebuild 1809 RMD160 78e542b5323023a4c06893f35eff4c704f41e9c9 SHA1 f69cafc04e567148e92e0053af90d1955bcd4b6f SHA256 467d31433f5a1469e7bb6fb847833e9067d8a64d44da8c688a14cbbfdcef0a50
+MD5 f5e00039bbfd9e5de54569545db04246 java-config-2.0.31.ebuild 1809
+RMD160 78e542b5323023a4c06893f35eff4c704f41e9c9 java-config-2.0.31.ebuild 1809
+SHA256 467d31433f5a1469e7bb6fb847833e9067d8a64d44da8c688a14cbbfdcef0a50 java-config-2.0.31.ebuild 1809
+MISC ChangeLog 25267 RMD160 cff74c2357e5c8e6a8ad124e16b8036fe939d862 SHA1 0254fd53ecee042b8bcbfa27c2f4a1c839ca6531 SHA256 24ce890722810ba546abedef9dbdfb05672967a04ada58051b2d9550026aaf8d
+MD5 3e0a020a8bf17214f02c07ad698d73cc ChangeLog 25267
+RMD160 cff74c2357e5c8e6a8ad124e16b8036fe939d862 ChangeLog 25267
+SHA256 24ce890722810ba546abedef9dbdfb05672967a04ada58051b2d9550026aaf8d ChangeLog 25267
 MISC metadata.xml 482 RMD160 b060f8a2492170d8513e1b2d03512d8b565b5045 SHA1 b154d3e425be12942f183a7ad1a37fecc215e4b4 SHA256 f80d3cd5afabd0dc4d177925c3715c464288e5ec3ed1ca809a7f7a66ee3907a5
 MD5 b4d3814b9ce4be88a25d99b3cfe2c076 metadata.xml 482
 RMD160 b060f8a2492170d8513e1b2d03512d8b565b5045 metadata.xml 482
@@ -54,3 +62,13 @@ SHA256 2159b501a5193cde183ec9c8b6a4f1b358d4e2e02c156405a4b01c9100a5207a files/di
 MD5 46c3bc6bfa51018218ebe3c55e471739 files/digest-java-config-2.0.30 256
 RMD160 eaa598710c997eaa020dbd8d77fb5202e470cf42 files/digest-java-config-2.0.30 256
 SHA256 c538263f8965d72090e73bce94903981faa6196d12b56959f4f5abc2e2c5daac files/digest-java-config-2.0.30 256
+MD5 c38ff0fcf6539f0bf10d2750b97c1dae files/digest-java-config-2.0.31 256
+RMD160 dcdc28e10c1f81f64e372c24f7fd50330fcf4b15 files/digest-java-config-2.0.31 256
+SHA256 fb9fdda52fe83303015b76545968d59324e286959171bb5dc01dd094e11cd8e0 files/digest-java-config-2.0.31 256
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.5 (GNU/Linux)
+
+iD8DBQFFhX/scxLzpIGCsLQRAqyuAJ9ou6aCD6t2BAYyzsehOAMmeurlSQCgnE6L
+YllmpKSDaztBiKTubgP+iC8=
+=NEOv
+-----END PGP SIGNATURE-----
